src/main/java/org/example/error/CodeErrorInfo.java
package org.example.error;

public interface CodeErrorInfo {
    Severity getSeverity();
    String getMessage();
}
